Integrate change 479983 from main  bug: 83551
 Add LDAP attributes to disable HTTP compression. Both of these attributes default to TRUE since changing them to false will significantly increase network usage and impact web client performance.

 zimbraHttpCompressionEnabled - Used to enable/disable Jetty GzipFilter. Turning this off will prevent compression of most dynamic responses.

 zimbraWebGzipEnabled - Used to enable/disable compression of static web client resources such as JS, CSS, Zimlet resources, and skins.

 In general most aspects of the BREACH attack can be mitigated by setting zimbraHttpCompressionEnabled to FALSE while leaving zimbraWebGzipEnabled set to TRUE; however to be completely sure both can be set to FALSE.

http://bugzilla.zimbra.com/show_bug.cgi?id=83551

Copied from Perforce
 Change: 479993