@@ -1,10 +1,10 @@
 /*
  * ***** BEGIN LICENSE BLOCK *****
  * Zimbra Collaboration Suite Server
- * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012 VMware, Inc.
+ * Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013 Zimbra Software, LLC.
  * 
  * The contents of this file are subject to the Zimbra Public License
- * Version 1.3 ("License"); you may not use this file except in
+ * Version 1.4 ("License"); you may not use this file except in
  * compliance with the License.  You may obtain a copy of the License at
  * http://www.zimbra.com/license.
  * 
@@ -15,57 +15,34 @@
 
 package com.zimbra.common.util;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
+import java.util.*;
 
 import com.google.common.base.Function;
-import com.google.common.base.Predicate;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 
 public class ListUtil {
-
+	
     /**
-     * Returns {@code true} if the collection is {@code null} or empty.
+     * Returns {@code true} if the collection is {@code null} or empty. 
      */
     public static boolean isEmpty(Collection<?> c) {
-        return c == null || c.isEmpty();
-    }
-
-    /**
-     * Returns either {@code c} or an empty collection if {@code c} is {@code null}.
-     */
-    @SuppressWarnings("unchecked")
-    public static <T> Collection<T> nullToEmpty(Collection<T> c) {
-        return (c == null ? (Collection<T>) Collections.emptyList() : c);
-    }
-
-    /**
-     * Returns the first element, or {@code null} if the collection is
-     * {@code null} or empty.
-     */
-    public static <T> T getFirstElement(Iterable<T> iterable) {
-        return iterable == null ? null : Iterables.getFirst(iterable, null);
+        return (c == null || c.isEmpty());
     }
 
     /**
      * Given two unsorted lists, return TRUE if they contain exactly the same things
      * (regardless of order)
-     *
-     * @param <T>
-     * @param lhs
-     * @param rhs
-     * @return
-     */
-    public static <T> boolean listsEqual(List<T> lhs, List<T> rhs) {
+     * 
+	 * @param <T>
+	 * @param lhs
+	 * @param rhs
+	 * @return
+	 */
+	public static <T> boolean listsEqual(List<T> lhs, List<T> rhs) {
         if (lhs.size() != rhs.size())
             return false;
-
+        
         HashSet<T> set = new HashSet<T>();
         set.addAll(lhs);
         for (T t: rhs) {
@@ -74,14 +51,14 @@ public class ListUtil {
         }
         return (set.size() == 0);
     }
-
+	
     /**
      * Merge two sorted Lists
-     *
+     * 
      * I could have used the Java Set collection here...unfortunately the only ordered set
      * is their TreeSet, and set union/subtraction therefore take NlogN with a pretty big
-     * constant overhead.
-     *
+     * constant overhead.  
+     * 
      * @param dest
      * @param src
      */
@@ -95,7 +72,7 @@ public class ListUtil {
                 numSrc++;
             }
         }
-
+        
         if (numSrc == 1) {
             for (int i = 0; i < src.length; i++) {
                 if (src[i] != null) {
@@ -112,23 +89,24 @@ public class ListUtil {
                 iter[iterOffset++] = src[i].iterator();
             }
         }
-
-
+        
+        
+        
         int numItersActive = src.length;
-
+        
         // holds the next values of each iterator
         T nextValue[] = (T[]) new Comparable[src.length];
-
+        
         T lowestValue = null;
         int lowestValueOffset = -1;
-
+        
         T lastAdded = null;
 
         // prime the pump
         for (int i = 0; i < iter.length; i++) {
             if (iter[i].hasNext()) {
                 nextValue[i] = iter[i].next();
-
+                
                 if (lowestValue == null || (lowestValue.compareTo(nextValue[i]) > 0)) {
                     lowestValue = nextValue[i];
                     lowestValueOffset = i;
@@ -138,7 +116,7 @@ public class ListUtil {
                 numItersActive--;
             }
         }
-
+        
         while (numItersActive > 0) {
             // grab lowest value from the src list, put it on the return list
             if ((!removeDuplicates) || (lastAdded == null)) {
@@ -152,7 +130,7 @@ public class ListUtil {
                 }
                 nextValue[lowestValueOffset] = null;
             }
-
+            
             // iterate the proper src list
             if (iter[lowestValueOffset].hasNext()) {
                 nextValue[lowestValueOffset] = iter[lowestValueOffset].next();
@@ -160,12 +138,12 @@ public class ListUtil {
                 iter[lowestValueOffset] = null;
                 numItersActive--;
             }
-
+            
             // find the next-lowest-value
             lowestValue = null;
             lowestValueOffset = -1;
             for (int i = 0; i < src.length; i++) {
-                if (lowestValue == null ||
+                if (lowestValue == null || 
                         ((nextValue[i] != null) && (lowestValue.compareTo(nextValue[i]) > 0))) {
                     lowestValue = nextValue[i];
                     lowestValueOffset = i;
@@ -173,13 +151,13 @@ public class ListUtil {
             }
         }
     }
-
+    
     /**
      * @param a
      * @param b
-     *
+     * 
      * Subtract two sorted lists
-     *
+     * 
      * returns (a-b);
      */
     public static <T> List<T> subtractSortedLists(
@@ -188,7 +166,7 @@ public class ListUtil {
 
         Iterator<T> aIter = a.iterator();
         Iterator<T> bIter = b.iterator();
-
+        
         T aVal = null;
         if (aIter.hasNext()) {
             aVal = aIter.next();
@@ -197,7 +175,7 @@ public class ListUtil {
         if (bIter.hasNext()) {
             bVal = bIter.next();
         }
-
+        
         while (aVal != null) {
             if (bVal == null) {
                 result.add(aVal);
@@ -218,14 +196,14 @@ public class ListUtil {
                     // a==b, so skip A!
                 }
             }
-
+            
             if (aIter.hasNext()) {
                 aVal = aIter.next();
             } else {
                 aVal = null;
             }
         }
-
+        
         return result;
     }
 
@@ -233,7 +211,7 @@ public class ListUtil {
      * Splits a <code>Collection</code> into <i>n</i> <code>List</code>s.
      * Lists <i>1</i> through <i>n-1</i> are of size <code>listSize</code>.  List <i>n</i>
      * contains the remaining elements.
-     *
+     * 
      * @return the split lists.  Returns <tt>null</tt> if <tt>c</tt> is <tt>null</tt>
      * or an empty <tt>List</tt> if <tt>c</tt> is empty.
      */
@@ -245,7 +223,7 @@ public class ListUtil {
         if (c.size() == 0) {
             return splitLists;
         }
-
+        
         List<E> curList = new ArrayList<E>(listSize);
         int i = 0;
 
@@ -266,49 +244,49 @@ public class ListUtil {
     private static class Test {
 
         @SuppressWarnings("unchecked")
-        static void doit() {
+        static private void doit() {
             List<Integer>[] in = new List[5];
 
             int i = 0;
 
             in[i] = new ArrayList<Integer>();
-            in[i].add(Integer.valueOf(1));
-            in[i].add(Integer.valueOf(3));
-            in[i].add(Integer.valueOf(5));
-            in[i].add(Integer.valueOf(7));
-            in[i].add(Integer.valueOf(9));
+            in[i].add(new Integer(1));
+            in[i].add(new Integer(3));
+            in[i].add(new Integer(5));
+            in[i].add(new Integer(7));
+            in[i].add(new Integer(9));
 
             i = 1;
             in[i] = new ArrayList<Integer>();
-            in[i].add(Integer.valueOf(1));
-            in[i].add(Integer.valueOf(7));
-            in[i].add(Integer.valueOf(12));
-            in[i].add(Integer.valueOf(13));
-            in[i].add(Integer.valueOf(13));
+            in[i].add(new Integer(1));
+            in[i].add(new Integer(7));
+            in[i].add(new Integer(12));
+            in[i].add(new Integer(13));
+            in[i].add(new Integer(13));
 
             i = 2;
             in[i] = new ArrayList<Integer>();
-            in[i].add(Integer.valueOf(1));
-            in[i].add(Integer.valueOf(2));
-            in[i].add(Integer.valueOf(3));
-            in[i].add(Integer.valueOf(4));
-            in[i].add(Integer.valueOf(5));
+            in[i].add(new Integer(1));
+            in[i].add(new Integer(2));
+            in[i].add(new Integer(3));
+            in[i].add(new Integer(4));
+            in[i].add(new Integer(5));
 
             i = 3;
             in[i] = new ArrayList<Integer>();
-            in[i].add(Integer.valueOf(5));
-            in[i].add(Integer.valueOf(6));
-            in[i].add(Integer.valueOf(7));
-            in[i].add(Integer.valueOf(8));
-            in[i].add(Integer.valueOf(9));
+            in[i].add(new Integer(5));
+            in[i].add(new Integer(6));
+            in[i].add(new Integer(7));
+            in[i].add(new Integer(8));
+            in[i].add(new Integer(9));
 
             i = 4;
             in[i] = new ArrayList<Integer>();
-            in[i].add(Integer.valueOf(100));
-            in[i].add(Integer.valueOf(101));
-            in[i].add(Integer.valueOf(102));
-            in[i].add(Integer.valueOf(103));
-            in[i].add(Integer.valueOf(104));
+            in[i].add(new Integer(100));
+            in[i].add(new Integer(101));
+            in[i].add(new Integer(102));
+            in[i].add(new Integer(103));
+            in[i].add(new Integer(104));
 
             List<Integer> test;
 
@@ -330,50 +308,41 @@ public class ListUtil {
 
             test = subtractSortedLists(in[2], in[0], new IntegerComparator());
             System.out.print("(1,2,3,4,5) - (1,3,5,7,9): ");
-            for (Iterator<Integer> iter = test.iterator(); iter.hasNext();) {
-                Integer cur = iter.next();
+            for (Iterator iter = test.iterator(); iter.hasNext();) {
+                Integer cur = (Integer)iter.next();
                 System.out.print(cur+", ");
             }
             System.out.println();
 
             test = subtractSortedLists(in[0], in[1], new IntegerComparator());
             System.out.print("(1,3,5,7,9) - (1,7,12,13,13): ");
-            for (Iterator<Integer> iter = test.iterator(); iter.hasNext();) {
-                Integer cur = iter.next();
+            for (Iterator iter = test.iterator(); iter.hasNext();) {
+                Integer cur = (Integer)iter.next();
                 System.out.print(cur+", ");
             }
             System.out.println();
-
+            
         }
 
-        private static class IntegerComparator implements Comparator<Integer> {
-            IntegerComparator()  {}
-
-            @Override public int compare(Integer o1, Integer o2) {
+        private static class IntegerComparator
+        implements Comparator<Integer> {
+            public int compare(Integer o1, Integer o2) {
                 return o1.compareTo(o2);
             }
         }
     }
-
+    
     /**
      * Returns a new {@code List} whose elements are the transformed versions of the data
      * stored in {@code fromIterable}.
-     *
+     * 
      * @param fromIterable source data
      * @param function transformation function
      */
     public static <F, T> List<T> newArrayList(Iterable<F> fromIterable, Function<? super F, ? extends T> function) {
         return Lists.newArrayList(Iterables.transform(fromIterable, function));
     }
-
-    /**
-     * Filters the given {@code Iterable} and returns a new {@code List} whose
-     * elements match the {@code Predicate}.
-     */
-    public static <T> List<T> newArrayList(Iterable<T> unfiltered, Predicate<T> predicate) {
-        return Lists.newArrayList(Iterables.filter(unfiltered, predicate));
-    }
-
+    
     public static void main(String[] args) {
         Test.doit();
     }
